<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Chatbot Our Baby Koishi</string>
    <string name="sendButtonName">Send</string>
    <string name="chatContentName">What you gonna say?</string>
    <string name="koishiChattingName">Baby Koishi</string>
    <string name="koishiChattingId">Koishi</string>
    <string name="neutralMessageId">Neutral</string>
    <string name="enterYourNickname">Please enter your nickname.</string>
    <string name="koishiPicture">Koishi\'s Picture</string>
    <string name="enterKoishiChatbot">Start Chatting</string>

    <string name="chatbotFeelingBerigoo">Koishi feeling berigoo!</string>
    <string name="chatbotGettingAsleep">Baby Koishi getting asleep…</string>
    <string name="chatbotHavingMeal" tools:ignore="Typos">Baby Koishi munch munch</string>
    <string name="chatbotRelaxedByPat">Baby Koishi gets relaxing…</string>
    <string name="chatbotSayingHello">Koishi welcoming you!</string>
    <string name="chatbotDidNotUnderstand">Koishi didn\'t understand</string>
    <string name="chatbotUnconsciousness">This is… Koishi\'s unconsciousness…</string>
    <string name="chatbotCatMeow">Baby cat Koishi meowing~</string>
    <string name="chatbotAngry">Baby Koishi got so angry!</string>

    <string name="fatigueStr">Fatigue</string>
    <string name="favorabilityStr">Favorability</string>
    <string name="fullnessStr">Fullness</string>
    <string name="happinessStr">Happiness</string>

    <string name="pntLoading">Loading</string>
    <string name="notePlease">Please note: only Korean language available</string>
</resources>
